# clang-algorithms

./: .gitignore  CMakeLists.txt  CMakeListsLib.txt  LICENSE  README.md  hca.c  hca.h  main.c  main.h  version.h  version.h.in
base_algorithm/: CMakeLists.txt  ba.h  bit.c  chain.c  chain.h  config.h  dict.c  dict.h  rand_gen.c  rand_gen.h  sort.c  utile_define.h  utilities.c  utilities.h
base_algorithm/include/: chain.h  sort.h  utilities.h
basic_algorithm/: CMakeLists.txt  README.md  chain.c  config.h  sort.c  utilities.c
basic_algorithm/include/: bit.h  chain.h  utilities.h
katas/: CMakeLists.txt  big_num.c  digital_root.c  find_odd_int.c  find_odd_int.h  katas.h  katas.md  mean_square_error.c  num_english.c  sum_of_positive.c  to_camel_case.c
katas/include/: big_num.h  sum_of_positive.h  to_camel_case.h
questions/: CMakeLists.txt  string_mix.c
questions/include/: string_mix.h
src/: README.md  config.h  typedefs.h
src/algorithms/: CMakeLists.txt  README.md  ba.h  dict.c  h_math.c  queue.c  utilities.c
src/algorithms/include/: queue.h  utilities.h
src/basic_algorithm/: CMakeLists.txt  README.md  ba.h  chain.c  h_math.c  stack.c  utilities.c
src/basic_algorithm/include/: chain.h  h_math.h  sort.h  stack.h  utilities.h
src/data_structures/: CMakeLists.txt  chain.c  ds.h  hash.c  hash_table.c  queue.c  stack.c
src/data_structures/include/: chain.h  hash.h  hash_table.h  queue.h  stack.h
src/katas/: CMakeLists.txt  README.md  big_num.c  determine_prime.c  digital_root.c  katas.h  lcs.c  mean_square_error.c  num_english.c
src/katas/include/: big_num.h  determine_prime.h  digital_root.h  lcs.h  mean_square_error.h  num_english.h
src/questions/: CMakeLists.txt  README.md  make_a_spiral.c  morse_code.c  questions.h  string_mix.c  sum_intervals.c
src/questions/include/: make_a_spiral.h  morse_code.h  sum_intervals.h
